Wrap tablet view style fix

--- a/src/ui/common/atoms/oc-image-gallery/style.scss
+++ b/src/ui/common/atoms/oc-image-gallery/style.scss
@@ -3,17 +3,25 @@
 .image-gallery {
 	display: flex;
 	@include media-breakpoint-lg {
-		flex-direction: column;
+		flex-wrap: wrap;
 	}
+
 	@include media-breakpoint-md {
 		flex-direction: column;
 	}
 	&__item {
 		@include media-breakpoint-md {
 			margin-bottom: 2rem;
-			width: 100%;
+			max-width: 100%;
 		}
-		flex-basis: 0;
+		@include media-breakpoint-lg {
+			max-width: 50%;
+		}
+		@include media-breakpoint-sm {
+			max-width: 100%;
+		}
+		flex-basis: auto;
+		flex-shrink: 2;
 		flex-grow: 1;
 		max-width: 100%;
 		min-width: 0;
